# rust-jit

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  osx_test.sh
bpf/: Cargo.toml  build.rs
bpf/examples/: bpf_dbg.rs
bpf/src/: ast.rs  codegen.rs  compile.rs  errors.rs  lib.rs  parse.rs
ir/: Cargo.toml
ir-derive/: Cargo.toml
ir-derive/src/: lib.rs
ir-derive/tests/: ircode.rs
ir-parse/: Cargo.toml
ir-parse/src/: lib.rs
ir/src/: constant.rs  expr.rs  ir.rs  kw.rs  lib.rs  op.rs  stmt.rs  ty.rs  value.rs
jit/: Cargo.toml
jit/examples/: brainf.rs  exception.rs  fibonacci.rs  hello.ll  how-to-use-jit.rs  jit-function.rs  module-maker.rs  nop-function.rs  parallel-jit.rs
jit/examples/kaleidoscope/: chapter2.rs  chapter3.rs  chapter4.rs  chapter5.rs  chapter6.rs  chapter7.rs  chapter8.rs  chapter9.rs  fib.ks  fibi.ks  lines.rs  ops.ks  star.ks
jit/src/: attribute.rs  bitcode.rs  block.rs  constant.rs  constexpr.rs  context.rs  debuginfo.rs  disasm.rs  engine.rs  function.rs  global.rs  inlineasm.rs  lib.rs  lto.rs  membuf.rs  metadata.rs  module.rs  object.rs  orc.rs  passmgr.rs  symbols.rs  target.rs  types.rs  utils.rs  value.rs
jit/src/insts/: aggregate.rs  atomic.rs  binop.rs  br.rs  builder.rs  call.rs  cast.rs  catch.rs  cmp.rs  gep.rs  globalstr.rs  invoke.rs  memory.rs  mod.rs  phi.rs  ret.rs  select.rs  switch.rs  terminator.rs  unary.rs  vaarg.rs  vector.rs
jit/src/intrinsics/: desc.rs  mod.rs
llvm-bpf/: Cargo.toml  build.rs
llvm-bpf/src/: ast.rs  codegen.rs  compile.rs  display.rs  lib.rs  raw.rs
llvm-ir/: Cargo.toml
llvm-ir/src/: expr.rs  ir.rs  kw.rs  lib.rs  op.rs  ty.rs
llvm-ir/src/insts/: mod.rs  op.rs  ret.rs  stmt.rs
llvm-ir/tests/: ircode.rs
llvm-jit/: Cargo.toml
llvm-jit/examples/: brainf.rs  exception.rs  fibonacci.rs  how-to-use-jit.rs  jit-function.rs  kaleidoscope-chapter2.rs  kaleidoscope-chapter3.rs  kaleidoscope-chapter4.rs  lines.rs  module-maker.rs  nop-function.rs  parallel-jit.rs
llvm-jit/examples/kaleidoscope/: chapter2.rs  chapter3.rs  chapter4.rs  chapter5.rs  chapter6.rs  chapter7.rs  chapter8.rs  errors.rs  lexer.rs  lexer2.rs  lines.rs
llvm-jit/src/: analysis.rs  attribute.rs  bitcode.rs  block.rs  builder.rs  constant.rs  constexpr.rs  context.rs  debuginfo.rs  disasm.rs  engine.rs  errors.rs  function.rs  global.rs  inlineasm.rs  intrinsics.rs  lib.rs  membuf.rs  metadata.rs  module.rs  object.rs  orc.rs  passmgr.rs  symbols.rs  target.rs  types.rs  utils.rs  value.rs
llvm-jit/src/insts/: aggregate.rs  ast.rs  atomic.rs  binop.rs  br.rs  builder.rs  call.rs  cast.rs  catch.rs  cmp.rs  gep.rs  globalstr.rs  invoke.rs  ir.rs  memory.rs  mod.rs  phi.rs  ret.rs  select.rs  switch.rs  terminator.rs  unary.rs  vaarg.rs  vector.rs
llvm-jit/src/intrinsics/: desc.rs  gen.rs  mod.rs  name.rs
llvm-wasm/: Cargo.toml
llvm-wasm/examples/: wavm.rs
wasm/: Cargo.toml
