[package]
name = "llvm-bpf"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

[features]
default = ["libpcap"]
libpcap = []
debug = ["llvm-jit/debug"]
gen = ["bindgen"]

[dependencies]
log = "0.4"
failure = "0.1"
nom = { version = "4.1", features = ["verbose-errors"] }

llvm-jit = { path = "../jit" }

[dev-dependencies]
pretty_env_logger = "0.3"
structopt = "0.2"
rustyline = "3.0"
hex = "0.3"
pcap-file = "0.10"
shellexpand = "1.0"

[build-dependencies]
log = "0.4"
pretty_env_logger = "0.3"
pkg-config = "0.3"

bindgen = { version = "0.45", optional = true }
