[package]
name = "llvm-ir-derive"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full"] }
quote = "0.6"

llvm-ir = { path = "../ir" }

[dev-dependencies]
pretty_env_logger = "0.3"
matches = "0.1"

llvm-jit = { path = "../jit" }

