[package]
name = "llvm-ir"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
syn = { version = "0.15", features = ["full"] }
quote = "0.6"
proc-macro2 = "0.4"
bitflags = "1"
lazy_static = "1"
itertools = "0.8"
regex = "1"

llvm-jit = { path = "../jit" }
llvm-ir-parse = { path = "../ir-parse" }

[dev-dependencies]
matches = "0.1"