[package]
name = "llvm-jit"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

[features]
default = []
debug = []

[lib]
doctest = false

[dependencies]
log = "0.4"
failure = "0.1"
lazy_static = "1.0"
bitflags = "1.0"
boolinator = "2.4"
arrayvec = "0.4"
hexplay = "0.2"
libc = "0.2"
nom = "4.0"
memmap = "0.7"
llvm-sys = "70"

[dev-dependencies]
pretty_env_logger = "0.2"
getopts = "0.2"
tempfile = "3.0"
matches = "0.1"
hamcrest = "*"
crossbeam = "0.4"
rustyline = "2.1"

[[example]]
name = "kaleidoscope_chapter2"
path = "examples/kaleidoscope/chapter2.rs"

[[example]]
name = "kaleidoscope_chapter3"
path = "examples/kaleidoscope/chapter3.rs"

[[example]]
name = "kaleidoscope_chapter4"
path = "examples/kaleidoscope/chapter4.rs"

[[example]]
name = "kaleidoscope_chapter5"
path = "examples/kaleidoscope/chapter5.rs"

[[example]]
name = "kaleidoscope_chapter6"
path = "examples/kaleidoscope/chapter6.rs"

[[example]]
name = "kaleidoscope_chapter7"
path = "examples/kaleidoscope/chapter7.rs"

[[example]]
name = "kaleidoscope_chapter8"
path = "examples/kaleidoscope/chapter8.rs"

[[example]]
name = "kaleidoscope_chapter9"
path = "examples/kaleidoscope/chapter9.rs"
