[package]
name = "llvm-bpf"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]

[features]
default = []
gen = ["bindgen", "pkg-config"]

[dependencies]
log = "0.4"
failure = "0.1"

llvm-jit = { path = "../llvm-jit" }

[build-dependencies]
log = "0.4"
pretty_env_logger = "0.3"

bindgen = { version = "0.45", optional = true }
pkg-config = { version = "0.3", optional = true }
