[package]
name = "llvm-jit"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]

[lib]
doctest = false

[[example]]
name = "how-to-use-jit"
path = "examples/how-to-use-jit.rs"

[[example]]
name = "module-maker"
path = "examples/module-maker.rs"

[[example]]
name = "nop-function"
path = "examples/nop-function.rs"

[[example]]
name = "jit-function"
path = "examples/jit-function.rs"

[[example]]
name = "parallel-jit"
path = "examples/parallel-jit.rs"

[[example]]
name = "kaleidoscope-chapter2"
path = "examples/kaleidoscope/chapter2.rs"
test = false

[dependencies]
log = "0.3"
error-chain = "0.10"
lazy_static = "0.2"
bitflags = "0.9"
hexplay = "0.1"
libc = "0.2"
llvm-sys = "40"

clippy = {version = "*", optional = true}

[dev-dependencies]
pretty_env_logger = "0.1"
tempfile = "2"
mmap = "0.1"
matches = "0.1"
hamcrest = "*"
crossbeam = "0.3"
rustyline = "1.0"
