[package]
name = "llvm-jit"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"

[features]
default = []
debug = []

[lib]
doctest = false

[dependencies]
log = "0.4"
failure = "0.1"
lazy_static = "1.0"
bitflags = "1.0"
boolinator = "2.4"
arrayvec = "0.4"
hexplay = "0.2"
libc = "0.2"
nom = "4.0"
mmap = "0.1"
llvm-sys = "70"

[dev-dependencies]
pretty_env_logger = "0.2"
getopts = "0.2"
tempfile = "3.0"
matches = "0.1"
hamcrest = "*"
crossbeam = "0.4"
rustyline = "2.1"
